[NOJIRA-bol-assesment] - code cleanup, divide god method to smallest, add few services for make easy unit testing, dajust banner and logging
